# pixie-net-api

./: .gitignore  CMakeLists.txt  README.md  settings.ini
include/: ConfigurationFileParser.hpp  FippiConfiguration.hpp  ParseConfigurationFiles.hpp  PixieNetConfig.h  PixieNetConfig.hpp  ProgramFippi.hpp  RunStatistics.hpp  RunStatisticsInterface.hpp  RunStatisticsPrinter.hpp  TraceInterface.hpp  UserspaceIo.hpp
scripts/: pixieNet.C  trc.gp
src/: CMakeLists.txt
src/api/: CMakeLists.txt  ConfigurationFileParser.cpp  FippiConfiguration.cpp  ParseConfigurationFiles.cpp  PixieNetCommon.cpp  PixieNetConfig.cpp  ProgramFippi.cpp  RunStatistics.cpp  RunStatisticsInterface.cpp  RunStatisticsPrinter.cpp  TraceInterface.cpp  UserspaceIo.cpp
src/pixie-net/: CMakeLists.txt  PixieNetConfig.cpp
src/utilities/: CMakeLists.txt  acquire.cpp  avgadc.c  avgadc.cpp  clockprog.c  clockprog.cpp  coincdaq.cpp  findsettings.c  findsettings.cpp  gettraces.c  gettraces.cpp  netdaq.cpp  nts.cpp  pollcsr.cpp  progfippi.c  progfippi.cpp  runstats.cpp  startdaq.c  startdaq.cpp
