add_executable(pollcsr pollcsr.cpp)
target_link_libraries(pollcsr PixieNetApi_STATIC m)
install(TARGETS pollcsr DESTINATION bin)

FOREACH (prog findsettings clockprog)
    add_executable(${prog} ${prog}.cpp)
    target_link_libraries(${prog} PixieNetApi_STATIC m)
    install(TARGETS ${prog} DESTINATION bin)
ENDFOREACH (prog)

add_executable(avgadc avgadc.cpp)
target_link_libraries(avgadc PixieNetApi_STATIC)
install(TARGETS avgadc DESTINATION bin)

FOREACH (prog progfippi startdaq coincdaq)
    add_executable(${prog} ${prog}.cpp)
    target_link_libraries(${prog} PixieNetApi_STATIC m)
    install(TARGETS ${prog} DESTINATION bin)
ENDFOREACH (prog)

add_executable(acquire acquire.cpp)
set(BOOST_ACQ_LIBS boost_date_time boost_chrono boost_atomic boost_program_options boost_system boost_thread boost_python rt)
if (USE_KAFKA)
    set(KAFKA_LIBS ssl crypto rdkafka cppkafka)
    add_definitions(-DUSE_KAFKA)
endif (USE_KAFKA)
target_link_libraries(acquire PixieNetApi_STATIC m ${BOOST_ACQ_LIBS} ${KAFKA_LIBS})
install(TARGETS acquire DESTINATION bin)

#if (USE_NETDAQ)
#    set(NETDAQ_BOOST_LIBS boost_log)
#    add_executable(netdaq log.cpp netdaq.cpp nts.cpp)
#    target_link_libraries(netdaq PixieNetApi_STATIC ${NETDAQ_BOOST_LIBS} zmq)
#    install(TARGETS netdaq DESTINATION bin)
#endif(USE_NETDAQ)