add_executable(acquire acquire.cpp)
set(BOOST_ACQ_LIBS boost_date_time boost_chrono boost_atomic boost_program_options boost_system boost_thread boost_python rt)
if (USE_KAFKA)
    set(KAFKA_LIBS ssl crypto rdkafka cppkafka)
    add_definitions(-DUSE_KAFKA)
endif (USE_KAFKA)
target_link_libraries(acquire PixieNetApi_STATIC m ${BOOST_ACQ_LIBS} ${KAFKA_LIBS})
install(TARGETS acquire DESTINATION bin)

FOREACH (prog clockprog coincdaq findsettings gettraces pollcsr progfippi runstats startdaq)
    add_executable(${prog} ${prog}.cpp)
    target_link_libraries(${prog} PixieNetApi_STATIC m)
    install(TARGETS ${prog} DESTINATION bin)
ENDFOREACH (prog)

if (USE_NETDAQ)
    set(NETDAQ_BOOST_LIBS boost_log)
    add_executable(netdaq log.cpp netdaq.cpp nts.cpp)
    target_link_libraries(netdaq PixieNetApi_STATIC ${NETDAQ_BOOST_LIBS} zmq)
    install(TARGETS netdaq DESTINATION bin)
endif(USE_NETDAQ)